# NUPresenceClient

./: CMakeLists.txt  NUPresenceClient.sln  nupresence.sublime-project  nupresence.sublime-workspace
NUPresenceClient/: NUPresenceClient.cpp  NUPresenceClient.vcxproj  NUPresenceClient.vcxproj.filters  ReadMe.txt  stdafx.cpp
assets/: ground.blend  ground.blend1  ground.mtl  monkey.blend  screen.blend  screen.blend1  screen.mtl  skybox.blend  unit_cube.blend  unit_cube.blend1  unit_cube.mtl
cmake/Modules/: FindGLEW.cmake  FindGLFW.cmake  FindOGLPlus.cmake  FindOOGL.cmake  FindOculusSDK.cmake  FindSDL.cmake  FindSDL2.cmake
doc/: OOGLShadowExample.cpp
module/visualisation/OculusViewer/: CMakeLists.txt  README.md
module/visualisation/OculusViewer/data/shaders/: meshShader.frag  meshShader.vert  texToScreen.frag  texToScreen.vert
module/visualisation/OculusViewer/src/: GameObject.h  NUPresenceClient.cpp  OVRManager.cpp  OVRManager.h  OculusViewer.cpp  OculusViewer.h  RenderMesh.cpp  RenderMesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TextureToScreen.cpp  TextureToScreen.h  WorldState.h
nuclear/: CMakeLists.txt
nuclear/cmake/Modules/: NUClearCompilerSettings.cmake  NUClearModule.cmake
roles/: viewer.role
shared/message/: Geometry.proto  Matrix.proto  Vector.proto
shared/message/input/proto/: PresenceUserState.proto
shared/utility/file/: fileutil.cpp
shared/utility/math/: Conversion.h
src/: NUPresenceClient.cpp  Renderer.cpp  Renderer.h  Scene.cpp
