
# Find some shared packages we need
FIND_PACKAGE(OculusSDK REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(OGLPlus REQUIRED)
FIND_PACKAGE(OPENGL REQUIRED)

# Build our NUClear module
message(GLFW: 	${GLFW_INCLUDE_DIR})
message(GLFW lib: 	${GLFW_LIBRARIES})
NUCLEAR_MODULE(
	INCLUDES 
	${OCULUS_SDK_INCLUDE_DIRS} 
	${GLFW_INCLUDE_DIR}
	${GLEW_INCLUDE_DIRS}
	${GLEW_INCLUDE_DIR}
 	${OGLPLUS_INCLUDE_DIR}
 	LIBRARIES  
 	${OCULUS_SDK_LIBRARIES}
    ${GLFW_LIBRARIES}
    ${GLEW_LIBRARY}
    ${OPENGL_gl_LIBRARY}
    ${OPENGL_glu_LIBRARY}
 	)