# Find some shared packages we need

# FIND_PACKAGE(OculusSDK REQUIRED)
# FIND_PACKAGE(GLEW REQUIRED)
# FIND_PACKAGE(GLFW REQUIRED)
# FIND_PACKAGE(OOGL REQUIRED)

set(TOOLCHAIN_INCLUDE "$ENV{SHARED_LIBRARIES}/${TARGET_ARCHITECTURE}/include")
set(TOOLCHAIN_LIBRARY_DIR "$ENV{SHARED_LIBRARIES}/${TARGET_ARCHITECTURE}/lib")

set(TOOLCHAIN_LIBRARIES
	${TOOLCHAIN_LIBRARY_DIR}/glfw3.lib
	${TOOLCHAIN_LIBRARY_DIR}/LibOVR.lib
	${TOOLCHAIN_LIBRARY_DIR}/OOGL-d.lib
	)

# Build our NUClear module
NUCLEAR_MODULE(
	INCLUDES 
	${TOOLCHAIN_INCLUDE}
 	LIBRARIES  
 	${TOOLCHAIN_LIBRARIES}
 	)